knightcrawler/ingressroute-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbitorrent.infra.${dns_domain}
  namespace: knightcrawler
spec:
  ingressClassName: nginx
  rules:
  - host: qbitorrent.infra.${dns_domain}
    http:
      paths:
      - backend:
          service:
            name: qbitorrent
            port:
              number: "8080"
        path: /
        pathType: Prefix
